# blog_code

./: .gitignore
deutschland_ticket/: pyproject.toml
deutschland_ticket/archive/: destinations.py
deutschland_ticket/data/: cities.sqlite
deutschland_ticket/src/: cities.py  common.py  destinations.py  hamburg_json.py  hamburg_markdown.py  langchain_summarize.py  model.py
deutschland_ticket/src/wikipedia_api/: pages.py  subcategories.py  wikipedia.py
langchain_summarizer/: .flake8  Makefile  README.md  pyproject.toml  summaries.md
langchain_summarizer/src/: gpt4all_summary.py  model.py  summarize.py
numpy_groupby/: groupby_profile.py  lexsort_array.py  mypy.ini  pyproject.toml
spark_arguments/: mypy.ini  pyproject.toml  spark_args.py
