[tool.poetry]
name = "numpy_groupby"
version = "0.1.0"
description = ""
authors = ["Vikram <vikramsingh001@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pandas = "^2.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
