[tool.poetry]
name = "spark-arguments"
version = "0.1.0"
description = ""
authors = ["Vikram <vikramsingh001@gmail.com>"]
readme = "README.md"
packages = [{include = "spark_arguments"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pyspark = "^3.4.0"
pandas = "^2.0.2"
numpy = "^1.24.3"
pyarrow = "^12.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
py_version = 38

[tool.black]
line-length = 120
target-version = ["py38"]